--- a/mov_rec/app/views/users/show.html.erb
+++ b/mov_rec/app/views/users/show.html.erb
@@ -73,10 +73,12 @@
 
 <% end %>
 
+<% if false %>
 <% @devices = Device.joins(:used_devices).where(used_devices: { profile_id: @profile.id }) %>
 
 <% @devices.each do |device| %>
   <%= devices.device_name %>
+<% end %>
 <% end %>
 
 <% @genres = Topic.joins(:likes_topics).where(likes_topics: { profile_id: @profile.id }) %>
