--- a/mov_rec/app/views/topics/show.html.erb
+++ b/mov_rec/app/views/topics/show.html.erb
@@ -10,6 +10,50 @@
 
 <% @movies = Movie.joins(:movie_topics).where(movie_topics: { topic_id: @topic.id }) %>
 
+<br>
+<br>
+
+<% @dusers = MovieRating.
+					select("max(user_rating) - min(user_rating) as d, max(user_rating) as ma, min(user_rating) as mi, profile_id").
+					joins(:movie_topics).
+					where(movie_topics: { topic_id: @topic.id }).
+					group("profile_id").
+					order('d DESC').
+					take(3) %>
+
+<table>
+  <thead>
+	<tr>
+	  <th>Diverse Raters</th>
+	  <th>Max Movie</th>
+	  <th>Rating</th>
+	  <th>Min Movie</th>
+	  <th>Rating</th>
+	  <th>Difference</th>
+	  <th colspan="3"></th>
+	</tr>
+  </thead>
+
+  <tbody>
+	<% @dusers.each do |duser| %>
+	  <% @user = User.joins(:profile).where(profiles: { id: duser.profile_id }).take %>
+	  <% @maxmovie = Movie.joins(:movie_ratings).where(movie_ratings: { user_rating: duser.ma, profile_id: duser.profile_id }).take %>
+	  <% @minmovie = Movie.joins(:movie_ratings).where(movie_ratings: { user_rating: duser.mi, profile_id: duser.profile_id }).take %>
+	  <tr>
+		<td><a href="/users/<%= @user.id %>"><%= @user.email %></a></td>
+		<td><%= @maxmovie.movie_name %></td>
+		<td><%= duser.ma %></td>
+		<td><%= @minmovie.movie_name %></td>
+		<td><%= duser.mi %></td>
+		<td><%= duser.d %></td>
+	  </tr>
+	<% end %>
+  </tbody>
+</table>
+
+<br>
+<br>
+
 <table>
   <thead>
 	<tr>
